containers/scripts/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
  name: argocd-ingress
  namespace: argocd
spec:
  rules:
    - host: argocd.jmunixusers.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 443
  # This section is only required if TLS is to be enabled for the Ingress
  tls:
    - hosts:
        - argocd.jmunixusers.org
      secretName: argocd-tls
