containers/scripts/www-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-backend
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    # cert-manager.io/issuer: "letsencrypt-prod"
    # nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"

spec:
  # tls:
  #   - hosts:
  #       - "*.cluster.jmunixusers.org"
  #     secretName: cluster-secret
  rules:
    - host: www.cluster.jmunixusers.org
